fix: buttons and contents of cards not being full allotted length on tablet and larger (closes #57)

--- a/css/src/layout/card.css
+++ b/css/src/layout/card.css
@@ -36,6 +36,8 @@
     align-self: left;
     justify-content: center;
     text-align: left;
+    max-width: 100%;
+    width: 100%;
   }
   .card > .text > .button {
     margin-left: 0;
